syntax = "proto3";

option java_package = "com.proto.enviar";

message ArchivoRequest{
    string archivo = 1;
}

message ArchivoChunk{
    string cadena = 1;
}

service ArchivoService{
    rpc enviarArchivo(ArchivoRequest) returns (stream ArchivoChunk);
}
